<resources>
    <string name="app_name">CropTrails</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">Field is required</string>
    <string name="permiViewFailDialogssion_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="amount_cant_be_null">Amount can\'t be null</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="invalid_number_please_check">Invalid number, Please check</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_press">Press Back again to Exit.</string>
    <string name="submit_label_login">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="internet_not_connected">Please check your internet Connection and Try again</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_prompt">Select country</string>
    <string-array name="country_arrays">
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
    </string-array>
    <string name="state_prompt">Choose a state</string>
    <string-array name="state_arrays">
        <item>MP</item>
        <item>UP</item>
        <item>Delhi</item>
    </string-array>
    <string name="tehsil_prompt">Choose a tehsil</string>
    <string-array name="tehsil_arrays">
        <item>Indore</item>
        <item>Ujjain</item>
        <item>Dewas</item>
    </string-array>
    <string name="city_prompt">Choose a City</string>
    <string-array name="city_arrays">
        <item>Indore</item>
        <item>Ujjain</item>
        <item>Dewas</item>
    </string-array>
    <string name="district_prompt">Choose a Destrict</string>
    <string-array name="district_arrays">
        <item>Indore</item>
        <item>Ujjain</item>
        <item>Dewas</item>
    </string-array>
    <string name="date_prompt">Choose a Date</string>
    <string-array name="date_arrays">
        <item>2018/06/8</item>
        <item>2018/06/9</item>
    </string-array>
    <string-array name="irrigation_type_array">
        <item>Select</item>
        <item>Surface irrigation</item>
        <item>Localized irrigation</item>
        <item>Drip irrigation</item>
        <item>Sprinkler irrigation</item>
        <item>Center pivot irrigation</item>
        <item>Lateral move irrigation</item>
        <item>Sub-irrigation</item>
        <item>Manual irrigation</item>

    </string-array>
    <string-array name="previous_crops_array">
        <item>Select</item>
        <item>Soybean</item>
        <item>Maize</item>
        <item>Sunflower</item>
        <item>Mustard</item>
        <item>Wheat</item>
        <item>Barley</item>
        <item>NA</item>
    </string-array>
    <string-array name="irrigation_source_array">
        <item>Select</item>
        <item>Canals</item>
        <item>Wells</item>
        <item>Tube-wells</item>
        <item>Tanks</item>
    </string-array>
    <string-array name="soil_type_array">
        <item>Select</item>
        <item>Clay Soil</item>
        <item>Loam Soil</item>
        <item>Sandy Soil</item>
        <item>Silty Soil</item>
        <item>Peaty Soil</item>
    </string-array>
    <string name="moisture_prompt">Choose Moisture Level</string>
    <string-array name="moisture_level">
        <item>Select</item>
        <item>Moist</item>
        <item>Not Moist</item>
        <item>Less Moist</item>
        <item>High Moist</item>
    </string-array>
    <string name="grade_prompt">Select Grade</string>
    <string-array name="grade">
        <item>Select</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="ipm_prompt">Select Material</string>
    <string-array name="ipm">
        <item>Select</item>
        <item>Carazen</item>
        <item>Amistar</item>
    </string-array>
    <string name="unit_prompt">Units</string>
    <string-array name="unit">
        <item>kg</item>
        <item>litre</item>
        <item>quintol</item>
        <item>ton</item>
    </string-array>
    <string name="iwm_prompt">Select Material</string>
    <string-array name="iwm">
        <item>Select</item>
        <item>Atrizen</item>
        <item>Laudis</item>
        <item>Roundup</item>
    </string-array>
    <string name="inm_prompt">Select Material</string>
    <string-array name="inm">
        <item>Select</item>
        <item>DAP</item>
        <item>MOP</item>
        <item>Urea</item>
        <item>20-20-0-13</item>
    </string-array>
    <string name="path_below">M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z</string>
    <string name="search_hint">Search User</string>
    <string name="inm_test_status">Select Material</string>
    <string-array name="status_test">
        <item>Select</item>
        <item>Good</item>
        <item>Bad</item>
        <item>Worse</item>
    </string-array>
    <string name="title_activity_harvest_show_single_plan_map">Map</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="rupee_symbol">\u20A8</string>
    <string name="no_response">Oops something went wrong. Please try again</string>
    <string name="no_response_plz_reload">Oops something went wrong. Please Reload</string>
    <string name="setting_activity_title">Settings</string>
    <string name="setting_no_username">Name : -</string>
    <string name="setting_no_fathername">Father Name :</string>
    <string name="signout_alert_dialog_message">Are you sure you want to exit ?</string>
    <string name="signout_alert_dialog_yes">YES</string>
    <string name="signout_alert_dialog_no">NO</string>
    <string name="offline_mode_logout_error">You can not logout in offline mode</string>
    <string name="snackbar_ok">OK</string>
    <string name="share_title">Share via</string>
    <string name="image_select_image_title">Add Photo!</string>
    <string name="image_choose_from_library">Choose from gallery</string>
    <string name="image_take_photo">Click a photo</string>
    <string name="image_cancel">Cancel</string>
    <string name="gallery_intent_title">Select File</string>
    <string name="select_from_gallery_error">Some error occurred! try again later</string>
    <string name="alert_title_label">Alert!</string>
    <string name="profile_alert_dialog_message">Do you want to discard changes?</string>
    <string name="profile_alert_dialog_yes">YES</string>
    <string name="profile_alert_dialog_no">NO</string>
    <string name="profile_image_update_failed">Failed to update profile photo. Please try again</string>
    <string name="name_label">Name </string>
    <string name="father_name_label">Father Name :</string>
    <string name="dob_label">Dob :</string>
    <string name="contact_label">Contact</string>
    <string name="email_label">Email</string>
    <string name="setting_add_farm">Add Farm</string>
    <string name="setting_reset_password">Reset Password</string>
    <string name="setting_share">Share</string>
    <string name="setting_rate_us">Rate Us</string>
    <string name="setting_signout">Sign out</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_terms_and_conditions">Terms and Conditions</string>
    <string name="mayur_nagdev">Mayur Nagdev</string>
    <string name="harvest_date">Harvest Date:</string>
    <string name="_10_07_2018">10/07/2018</string>
    <string name="father_s_name">Father Name :</string>
    <string name="no_old_expnse_data_avaialble_label">No expense added yet</string>
    <string name="no_harvest_paln_data_avaialble_label">No record found for planed harvest</string>
    <string name="no_harvest_data_available">No record found for harvest collection</string>
    <string name="expense_type_hint">Enter Expense Type</string>
    <string name="harvest_date_exp_label_act">Harvest Date(Act.)</string>
    <string name="harvest_date_exp_label_exp">Harvest Date(Exp.)</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="date_msg">Date</string>
    <string name="narration">Description</string>
    <string name="submit">Submit</string>
    <string name="submit_area">SUBMIT AREA</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="cant_add_expense_in_offline_mode">Cannot add expense in offline mode</string>
    <string name="add_new_expenditure">Add new Expense</string>
    <string name="activity_label">Activity</string>
    <string name="visit_label">Visit</string>
    <string name="farm_id_label">Farm Id:</string>
    <string name="farm_detail_label">Farm Details</string>
    <string name="farmer_name_label">Farmer Name :</string>
    <string name="notification_label">Notification</string>
    <string name="drawer_check_area">Check Area</string>
    <string name="drawer_offline_mode">Offline Mode</string>
    <string name="drawer_plan_harvest">Plan Harvest</string>
    <string name="drawer_planned_harvest">Planned Harvest</string>
    <string name="drawer_back_to_online">Back To Online</string>
    <string name="drawer_settings">Settings</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_expenditure">Expenditure</string>
    <string name="landing_search">Search</string>
    <string name="landing_filter">Filter</string>
    <string name="germination_label">Plant Population</string>
    <string name="address_label">Address :</string>
    <string name="map_option_bottom_sheet">Choose Mode</string>
    <string name="crop_loss_damage_labe">Crop Loss / Damage</string>
    <string name="near_me_label">Near Me</string>
    <string name="input_cost_label">Input Cost</string>
    <string name="soil_health_card_label">Soil Health Card</string>
    <string name="resources_used_label">Resources Used</string>
    <string name="filter_by_label">Filter By</string>
    <string name="harvest_label">Harvest</string>
    <string name="satelite_view_label">Satellite View</string>
    <string name="crop_track_label">CropTrace</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="pin_drop_mode">Pin Drop Mode</string>
    <string name="walk_around_mode">Walk Around Mode</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="refresh">Refresh</string>
    <string name="vetting_label">Vetting</string>
    <string name="rejected_farms">Rejected</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="soil_sense">SoilSens</string>
    <string name="task">Task</string>
    <string name="crop_cycle">Crop cycle</string>
    <string name="want_remove_ads">Want to remove Ads?</string>
</resources>