<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_grey_700_18dp"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/landing_search"/>


    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_iconfinder_filter_2561439"
        app:showAsAction="always|collapseActionView"
        android:title="@string/landing_filter"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="always|collapseActionView"
        android:title="@string/refresh"/>


</menu>