<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.ContentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/et_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/map_option_bottom_sheet"
            android:textSize="@dimen/_12ssp" />

        <View
            android:id="@+id/view0"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@color/light_text_color" />



        <TextView
            android:id="@+id/tv_normal_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/walk_around_mode"
            android:drawableRight="@drawable/ic_actual_area_24dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_easy_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/easy_mode"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_actual_area_24dp"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/tv_easy_mode_ultra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/pin_drop_mode"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_actual_area_24dp"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.appcompat.widget.ContentFrameLayout>