<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar_setting"
        layout="@layout/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:textSize="@dimen/_15ssp"
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@color/darkgreen"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:textSize="@dimen/_15ssp"
        android:id="@+id/title_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="@color/darkgreen"
        android:visibility="gone" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:textColor="@color/white"
        android:background="@color/darkgreen"
        android:id="@+id/button_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan" />
</LinearLayout>