<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/_10sdp"
    android:layout_margin="@dimen/_7sdp"
    android:background="@drawable/white_border"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/farmer_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textStyle="bold"
            android:id="@+id/farmerNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/farm_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView

            android:text="  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textStyle="bold"
            android:id="@+id/farmIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textStyle="bold"
            android:id="@+id/addressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>